--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -28,6 +29,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moveable": "^0.50.7",
+    "react-redux": "^8.0.7",
+    "react-selecto": "^1.22.5",
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
     "tailwind-merge": "^1.12.0",
