--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
+    "@types/react-color": "^3.0.6",
     "encoding": "^0.1.13"
   }
 }
