(chore): sync editor with database

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ NEXT_PUBLIC_PROJECT_ID=6475ca5453bd7b131cd8
 NEXT_PUBLIC_DATABASE_ID=6477edd01cdd300e0b80
 NEXT_PUBLIC_CAMPAIGN_COLLECTION_ID=647ab9ff72389c6feeb1
 NEXT_PUBLIC_USERS_COLLECTION_ID=647ab9e71d5e63e69fed
+NEXT_PUBLIC_POPUP_COLLECTION_ID=647e99ee66d5a7b6b739
 NEXT_PUBLIC_BUCKET_ID=647d8d9393004459fd6d
 NEXT_PUBLIC_CLOUD_URL=https://cloud.appwrite.io/v1/storage
