--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "appwrite": "^11.0.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -39,6 +40,7 @@
     "react-moveable": "^0.50.7",
     "react-redux": "^8.0.7",
     "react-selecto": "^1.22.5",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
     "tailwind-merge": "^1.12.0",
